# bad-apple-efi

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  generate_ascii_art.py  rust-toolchain.toml
.cargo/: config.toml
src/: apic.rs  archive.rs  cpu_features.rs  display.rs  main.rs  memory.rs  midi.rs  pcs.rs  pixel.rs  serial.rs  time.rs
xtask/: Cargo.toml
xtask/src/: main.rs
